19422
There is a compilation error (only in the REPL) in the following example, where none should be:
```scala
scala> val f: (Int*) => Int = _.size
<console>:5: error: type mismatch;
 found   : Int* => Int
 required: Seq[Int] => Int
  lazy val $result = f
                                          ^
```
